Constraints: Make advanced list be a list.

Previous behavior: A list of optional constraints resulted
in a single advanced element, with one field for each value.

New behavior: A list of optional constraints results in a
list of advanced elements, with one field set for each value.

The difference is important when there are mulitple values
with the same name. For constraints with distinct names, there
should be no difference.

BUG=594929

Review URL: https://codereview.chromium.org/1808173002

Cr-Commit-Position: refs/heads/master@{#381724}

Former-commit-id: 20078f72c457d9612c1e12044e7e87fc721b4397